tests/error/comprehension_errors/multi_use2.err
Error: Copy violation (at $FILE:13:35)
   | 
11 | @guppy(module)
12 | def foo(qs: list[qubit] @owned, xs: list[int]) -> list[qubit]:
13 |     return [q for x in xs for q in qs]
   |                                    ^^ Variable `qs` with non-copyable type `list[qubit]` would be
   |                                       consumed multiple
   |                                       times when evaluating
   |                                       this comprehension

Guppy compilation failed due to 1 previous error
